[STYLE CHANGE] Fixed alignment issues with menu buttons. Desktop=Right, Mobile or Tablet=Left

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -176,6 +176,9 @@ body {
     .mobile-nav button {
         margin-left: 0;
     }
+    .text-right {
+        text-align: unset !important;
+    }
 }
 
 /* Screen width less than 576 */
